--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-cd": "npx newman run ./test/cancerdeaths-stats.json -e ./test/env/LOCAL.json"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/gti-sos/SOS2122-24#readme",
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "nedb": "^1.8.0"
   }
 }
