--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "npx newman run ./test/cancerdeaths-stats.json -e ./test/env/LOCAL.json"
+    "test": "npx newman run ./test/cancerdeaths-stats.json -e ./test/env/LOCAL.json",
+    "test-pneumonia-stats":"npx newman run ./test/pneumonia-stats.json -e ./test/env/HEROKU.json"
   },
   "repository": {
     "type": "git",
