--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,5 +9,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm start &
-      - run: npm test && test-pneumonia-stats
-      
+      - run: npm test
