--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "sos2122-24",
   "version": "1.0.0",
-  "description": "tareas f03",
+  "description": "proyecto",
   "main": "index.js",
   "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "start": "node index.js",
     "test-cancerdeaths-stats": "npx newman run ./test/cancerdeaths-stats.json -e ./test/env/LOCAL.json",
-    "test-pneumonia-stats":"npx newman run ./test/pneumonia-stats.json -e ./test/env/HEROKU.json",
+    "test-pneumonia-stats": "npx newman run ./test/pneumonia-stats.json -e ./test/env/HEROKU.json",
     "test-air-pollution-stats": "npx newman run ./test/air-pollution-stats.json -e ./test/env/LOCAL1.json",
-    "test":"npm run test-cancerdeaths-stats && npm run test-pneumonia-stats && npm run test-air-pollution-stats"
+    "test": "npm run test-cancerdeaths-stats && npm run test-pneumonia-stats && npm run test-air-pollution-stats"
   },
   "repository": {
     "type": "git",
@@ -21,8 +23,21 @@
   },
   "homepage": "https://github.com/gti-sos/SOS2122-24#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cool-ascii-faces": "^1.3.4",
     "express": "^4.17.3",
-    "nedb": "^1.8.0"
+    "nedb": "^1.8.0",
+    "svelte-spa-router": "^3.2.0",
+    "sveltestrap": "^5.9.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.0.0"
   }
 }
