--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "test-cancerdeaths-stats": "npx newman run ./test/cancerdeaths-stats.json -e ./test/env/LOCAL.json",
     "test-pneumonia-stats": "npx newman run ./test/pneumonia-stats.json -e ./test/env/HEROKU.json",
     "test-air-pollution-stats": "npx newman run ./test/air-pollution-stats.json -e ./test/env/LOCAL1.json",
-    "test": "npm run test-cancerdeaths-stats && npm run test-pneumonia-stats && npm run test-air-pollution-stats",
-    "test1": "jest",
-  "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls"
+    "test": "npm run test-cancerdeaths-stats && npm run test-pneumonia-stats && npm run test-air-pollution-stats"
   },
   "repository": {
     "type": "git",
