--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 13.x, 14.x, 15.x]
+        node-version: [15.x]
 
     steps:
     - name: Checkout repository
@@ -24,6 +24,9 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+
+    - name: start
+      run: npm start &
 
     - name: Run tests
       run: npm run test
