--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -29,7 +29,7 @@ jobs:
       run: npm start &
 
     - name: Run tests
-      run: npm test
+      run: npm run test1
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
