--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "test-air-pollution-stats": "npx newman run ./test/air-pollution-stats.json -e ./test/env/LOCAL1.json",
     "test": "npm run test-cancerdeaths-stats && npm run test-pneumonia-stats && npm run test-air-pollution-stats",
     "test1": "jest --coverage"
-    
   },
   "repository": {
     "type": "git",
@@ -34,9 +33,11 @@
     "d3": "^7.4.4",
     "express": "^4.17.3",
     "highcharts": "^10.1.0",
+    "jscharting": "^3.3.1",
     "jsonwebtoken": "^8.5.1",
     "nedb": "^1.8.0",
     "nodemon": "^2.0.16",
+    "path": "^0.12.7",
     "request": "^2.88.2",
     "save": "^2.5.0",
     "svelte-spa-router": "^3.2.0",
